# project_dz12_2_1project_poetry

./: pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
